# SchollerVictor_DataScientistMachineLearning_OC

./: .gitignore  README.md  requirements.txt  setup_path.py
Cours2/: Victor_Scholler_1_fiche_04082025  pyproject.toml
Cours2/livrables Cours2/: Presentation_Cours2.pptx  Scholler_Victor_1_notebook_050825.ipynb  pyproject.toml
Cours3/: P3_template_modelistation_supervisee_data_scientist.ipynb  Presentation_Cours3.pptx  pyproject.toml
Cours3/Livrables_Cours3/: P3_template_modelistation_supervisee_data_scientist.ipynb  Presentation_Cours3.pptx
Cours4/: Cours4.ipynb  Presentation_Cours4.pptx  __init__.py
Cours4/Rendus Cours 4/: Presentation_Cours4.pptx
Cours5/: Code_Source_Cours5.ipynb
tools/: __init__.py  correlation.py  model_evaluation.py  stats_descriptive.py
