[project]
name = "cours-2-analyse-systemes-educatifs"
version = "0.1.0"
description = "Cours 2 formation OpenClassrooms, analyser des donnees de systèmes éducatifs"
authors = [
    {name = "VicSchol",email = "116602494+VicSchol@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
