[project]
name = "cours3"
version = "0.1.0"
description = ""
authors = [
    {name = "VicSchol",email = "116602494+VicSchol@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "sklearn (>=0.0.post12,<0.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
