[project]
name = "cours-2-analyse-systemes-educatifs"
version = "0.1.0"
description = "Cours 2 formation OpenClassrooms, analyser des données de systèmes éducatifs"
authors = [
    {name = "VicSchol", email = "116602494+VicSchol@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=1.27.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "scikit-learn (>=1.3.0,<2.0.0)",
    "plotly (>=6.1.0,<7.0.0)",
    "pycountry (>=23.3.0,<24.0.0)",
    "nbformat (>=5.8.0,<6.0.0)"
]

[tool.poetry.dev-dependencies]
jupyter = "^1.0"
ipython = "^8.17"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
